[package]
name = "hamming-lsh"
version = "0.2.1-alpha.0"
edition = "2018"
authors = ["Geordon Worley <vadixidav@gmail.com>"]
license = "MIT"
description = "Produces locality-sensitive hashes (LHS) for hamming-space bags of features"
repository = "https://github.com/rust-cv/hamming-dict"
documentation = "https://docs.rs/hamming-dict/"
keywords = ["bow", "lsh", "hamming", "simhash", "bag"]
categories = ["no-std", "computer-vision"]
readme = "README.md"

[features]
serde1 = ["serde", "bitarray/serde"]

[dependencies]
bitarray = { version = "0.9.1", default-features = false }
hamming-dict = { version = "0.5.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.126", features = ["derive", "alloc"], default-features = false, optional = true }

[dev-dependencies]
rand = { version = "0.8.4", default-features = false }
rand_xoshiro = { version = "0.6.0", default-features = false }
